[project]
name = "locust-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi-cache2>=0.2.2",
    "fastapi[standard]>=0.115.12",
    "locust>=2.33.2",
    "pydantic>=2.10.6",
    "redis>=5.2.1",
    "torch>=2.6.0",
    "transformers>=4.50.1",
]
